--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "doanvipqua",
-    "database": "api_movie_renewnodejs",
-    "host": "127.0.0.1",
+    "username": "ustlai4o9cugeaw1",
+    "password": "ojrVawlPm0aNMtmsC3lz",
+    "database": "bm6kwaen45f9aocdzs0d",
+    "host": "bm6kwaen45f9aocdzs0d-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   },
   "test": {
