--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "u5uj0zjrpgp6knph",
-    "password": "79u96fJ9xFlon41BrBgl",
-    "database": "bmli6nv6ixjhezjd8mtn",
-    "host": "bmli6nv6ixjhezjd8mtn-mysql.services.clever-cloud.com",
+    "username": "U7WWADHJLI",
+    "password": "ylfXU3cROi",
+    "database": "U7WWADHJLI",
+    "host": "remotemysql.com",
     "dialect": "mysql"
   },
   "test": {
