update config db

--- a/config/config.json
+++ b/config/config.json
@@ -7,17 +7,17 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "U7WWADHJLI",
+    "password": "ylfXU3cROi",
+    "database": "U7WWADHJLI",
+    "host": "remotemysql.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "U7WWADHJLI",
+    "password": "ylfXU3cROi",
+    "database": "U7WWADHJLI",
+    "host": "remotemysql.com",
     "dialect": "mysql"
   }
 }
