--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-; config app
-APP_PORT = 3036
+
+PORT = 3036
 APP_SECRET_KEY = ReNewNodeJS
 SAVE_LOCAL = false
 ERROR_MESSAGE = Thất bại
 SUCCESS_MESSAGE = Xử lý thành công! 
-; config cloud ftp img/video
+
 CLOUDINARY_URL= cloudinary://613567742431785:VPAX3_C37aRzHCIqKiEgGDJty44@depatula1
-; config info user
+
 ROLE_USER_CLIENT = NGUOIDUNG
 ROLE_USER_ADMIN = QUANTRI
 AVATAR_USER_DEFAUT = https://res.cloudinary.com/depatula1/image/upload/v1639634403/guwf0wtqyfpgvigv1m0f.jpg
