--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "sequelize": "^6.12.0-beta.3",
-    "swagger-ui-express": "^4.3.0",
-    "uuid": "^8.3.2"
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
