--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "U7WWADHJLI",
-    "password": "ylfXU3cROi",
-    "database": "U7WWADHJLI",
-    "host": "remotemysql.com",
+    "username": "root",
+    "password": "doanvipqua",
+    "database": "test_db_api",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
